# wasm-test

./: .gitignore  README.md  closure.html  compare.html  docs_multithreading_summary.md  index.html  main.cc  main.js  main.wasm  main.worker.js  pkg.js  requirements.txt  server.py  type_conv.cc  type_conv.html  type_conv.js  type_conv.wasm
demos/01-pthreads/: build.ps1
demos/01-pthreads/output/: main.wasm
demos/01-pthreads/output/dwarf/: main.js  main.wasm
demos/01-pthreads/output/release/: main.js  main.wasm
demos/01-pthreads/output/sourcemap/: main.js  main.wasm  main.wasm.map
demos/01-pthreads/src/: main.cc
demos/01-pthreads/web/: index.html
demos/02-asyncify/: build.ps1
demos/02-asyncify/output/: asyncify.js
demos/02-asyncify/output/dwarf/: asyncify.js  asyncify.wasm
demos/02-asyncify/output/release/: asyncify.js  asyncify.wasm
demos/02-asyncify/output/sourcemap/: asyncify.js  asyncify.wasm  asyncify.wasm.map
demos/02-asyncify/src/: main.cc
demos/02-asyncify/web/: index.html
demos/03-manual-workers/: build.ps1
demos/03-manual-workers/output/: task.wasm
demos/03-manual-workers/output/dwarf/: task.wasm
demos/03-manual-workers/output/release/: task.js
demos/03-manual-workers/output/sourcemap/: task.js  task.wasm  task.wasm.map
demos/03-manual-workers/src/: task.cc
demos/03-manual-workers/web/: index.html  main.js  task-worker.js
demos/04-cpp20-coroutine/: build.ps1
demos/04-cpp20-coroutine/output/: coroutine.js
demos/04-cpp20-coroutine/output/dwarf/: coroutine.wasm
demos/04-cpp20-coroutine/output/release/: coroutine.js  coroutine.wasm
demos/04-cpp20-coroutine/output/sourcemap/: coroutine.js  coroutine.wasm  coroutine.wasm.map
demos/04-cpp20-coroutine/src/: main.cc
demos/04-cpp20-coroutine/web/: index.html
demos/05-cmake-emcmake/: CMakeLists.txt  build.ps1
demos/05-cmake-emcmake/cmake/: WasmBuild.cmake  WasmSourceMap.cmake
demos/05-cmake-emcmake/src/: CMakeLists.txt  main.cc
demos/05-cmake-emcmake/src/app/: main.cc  tools_main.cc
demos/05-cmake-emcmake/src/core/: accumulator.cc  accumulator.h
demos/05-cmake-emcmake/src/domain/: report.cc  report.h  simulation.cc  simulation.h
demos/05-cmake-emcmake/src/platform/: log_sink.cc  log_sink.h
demos/05-cmake-emcmake/web/: index.html  tools.html
demos/extra-interop/closure/: build.ps1
demos/extra-interop/closure/output/: closure.wasm
demos/extra-interop/closure/output/dwarf/: closure.js  closure.wasm
demos/extra-interop/closure/output/release/: closure.js
demos/extra-interop/closure/output/sourcemap/: closure.wasm  closure.wasm.map
demos/extra-interop/closure/src/: closure.cc
demos/extra-interop/closure/web/: index.html
demos/extra-interop/type-conversion/: build.ps1
demos/extra-interop/type-conversion/output/: type_conv.wasm  type_conv.wasm.map
demos/extra-interop/type-conversion/output/dwarf/: type_conv.wasm
demos/extra-interop/type-conversion/output/release/: type_conv.js
demos/extra-interop/type-conversion/output/sourcemap/: type_conv.js  type_conv.wasm  type_conv.wasm.map
demos/extra-interop/type-conversion/web/: index.html
docs/: 01-user-validation-guide.md  02-developer-code-reading-guide.md  03-debugging-wasm-js-guide.md  04-technical-whitepaper.md  05-cmake-sourcemap-base-guide.md  06-cmake-helper-modules-developer-guide.md
scripts/: build_all.ps1
